--- a/bootstrap_sandbox/2_7_sizing.html
+++ b/bootstrap_sandbox/2_7_sizing.html
@@ -140,7 +140,7 @@
         <div class="p-3 mb-2 bg-light border border-primary rounded-right">Rounded Right</div>
         <div class="p-3 mb-2 bg-light border border-primary rounded-left">Rounded Left</div>
         <div class="p-3 mb-2 bg-light border border-primary rounded-circle">Rounded Circle</div>
-        <div class="p-3 mb-2 bg-light border border-primary rounded-dark">Dark</div>
+        <div class="p-3 mb-2 bg-light border border-primary rounded-0">Dark</div>
 
     </div>
     <!-- ./container -->
