--- a/bootstrap_sandbox/4_2_grid_system.html
+++ b/bootstrap_sandbox/4_2_grid_system.html
@@ -89,7 +89,7 @@
 
     <!-- RESPONSIVE GRID -->
     <div class="row">
-      <div class="col-sm-6 col-md-8 col-lg-9" style="border:1px solid #333">
+      <div class="col-sm-6 col-md-8 col-lg-9 col-xl-10" style="border:1px solid #333">
         <ul>
           <li>6 column on small screens</li>
           <li>8 column on medium screen</li>
@@ -97,7 +97,7 @@
           <li>10 column on xlarge screen</li>
         </ul>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3" style="border:1px solid #333">
+      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2" style="border:1px solid #333">
         <ul>
           <li>6 column on small screens</li>
           <li>4 column on medium screen</li>
@@ -108,11 +108,11 @@
     </div>
 
     <!-- EQUAL WIDTH -->
-    <div>
-      <div style="border:1px solid #333">Equal Width</div>
-      <div style="border:1px solid #333">Equal Width</div>
-      <div style="border:1px solid #333">Equal Width</div>
-      <div style="border:1px solid #333">Equal Width</div>
+    <div class="row">
+      <div class="col" style="border:1px solid #333">Equal Width</div>
+      <div class="col" style="border:1px solid #333">Equal Width</div>
+      <div class="col" style="border:1px solid #333">Equal Width</div>
+      <div class="col" style="border:1px solid #333">Equal Width</div>
     </div>
 
     <!-- EQUAL WIDTH MULTI ROW -->
