--- a/bootstrap_sandbox/4_2_grid_system.html
+++ b/bootstrap_sandbox/4_2_grid_system.html
@@ -125,28 +125,29 @@
     </div>
 
     <!-- AUTO LAYOUT -->
-    <div>
-      <div style="border:1px solid #333">Auto Layout</div>
-      <div style="border:1px solid #333">Auto Layout</div>
-      <div style="border:1px solid #333">Auto Layout</div>
+    <div class="row">
+      <div class="col" style="border:1px solid #333">Auto Layout</div>
+      <div class="col-6" style="border:1px solid #333">Auto Layout</div>
+      <div class="col-4" style="border:1px solid #333">Auto Layout</div>
     </div>
 
     <!-- EQUAL WIDTH STACKED -->
-    <div>
-      <div style="border:1px solid #333">Equal Width Stack</div>
-      <div style="border:1px solid #333">Equal Width Stack</div>
-      <div style="border:1px solid #333">Equal Width Stack</div>
+    <div class="row">
+      <div class="col-sm" style="border:1px solid #333">Equal Width Stack</div>
+      <div class="col-sm" style="border:1px solid #333">Equal Width Stack</div>
+      <div class="col-sm" style="border:1px solid #333">Equal Width Stack</div>
     </div>
+    
 
     <!-- ORDERING -->
-    <div>
-      <div style="border:1px solid #333">
+    <div class="row">
+      <div class="col" style="border:1px solid #333">
         First
       </div>
-      <div style="border:1px solid #333">
+      <div class="col" style="border:1px solid #333">
         Second
       </div>
-      <div style="border:1px solid #333">
+      <div class="col" style="border:1px solid #333">
         Third
       </div>
     </div>
