--- a/LoopLabSocial/index.html
+++ b/LoopLabSocial/index.html
@@ -47,7 +47,8 @@
         <div class="dark-overlay">
             <div class="home-inner container">
                 <div class="row">
-                    <div class="col-lg-8 d-none d-lg-block">  <!--This will only show on large screens that is what d-none d-lg-block does-->
+                    <div class="col-lg-8 d-none d-lg-block">
+                        <!--This will only show on large screens that is what d-none d-lg-block does-->
                         <h1 class="display-4">Build <strong>social profiles</strong> and gain revenue <strong>profits</strong></h1>
                         <div class="d-flex">
                             <div class="p-4 align-self-start">
@@ -85,13 +86,13 @@
                                         <input type="text" class="form-control form-control-lg" placeholder="Username">
                                     </div>
                                     <div class="form-group">
-                                            <input type="email" class="form-control form-control-lg" placeholder="Email">
+                                        <input type="email" class="form-control form-control-lg" placeholder="Email">
                                     </div>
                                     <div class="form-group">
-                                            <input type="password" class="form-control form-control-lg" placeholder="Password">
+                                        <input type="password" class="form-control form-control-lg" placeholder="Password">
                                     </div>
                                     <div class="form-group">
-                                            <input type="password" class="form-control form-control-lg" placeholder="Confirm Password">
+                                        <input type="password" class="form-control form-control-lg" placeholder="Confirm Password">
                                     </div>
                                     <input type="submit" value="Submit" class="btn btn-outline-light btn-block">
                                 </form>
@@ -104,6 +105,54 @@
             </div>
         </div>
     </header>
+
+    <!--EXPLORE HEAD-->
+    <section id="explore-head-section">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center py-5">
+                    <h1 class="display-4">Explore</h1>
+                    <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste obcaecati,
+                        aspernatur ut nisi natus animi molestias quis quibusdam quisquam vel.</p>
+                    <a href="#" class="btn btn-outline-secondary">Find Out More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--EXPLORE SECTION-->
+  <!-- EXPLORE SECTION -->
+  <section id="explore-section" class="bg-light text-muted py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <img src="img/explore-section1.jpg" alt="" class="img-fluid mb-3 rounded-circle">
+            </div>
+            <div class="col-md-6">
+              <h3>Explore & Connect</h3>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore reiciendis, voluptate at alias laborum odit aliquid
+                tempore perspiciatis repudiandae hic?</p>
+              <div class="d-flex">
+                <div class="p-4 align-self-start">
+                  <i class="fas fa-check fa-2x"></i>
+                </div>
+                <div class="p-4 align-self-end">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi distinctio iusto, perspiciatis mollitia natus harum?
+                </div>
+              </div>
+    
+              <div class="d-flex">
+                <div class="p-4 align-self-start">
+                  <i class="fas fa-check fa-2x"></i>
+                </div>
+                <div class="p-4 align-self-end">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi distinctio iusto, perspiciatis mollitia natus harum?
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
 
 
