--- a/LoopLabSocial/index.html
+++ b/LoopLabSocial/index.html
@@ -13,10 +13,10 @@
     <title>Bootstrap Theme</title>
 </head>
 
-<body>
+<body data-spy="scroll" data-target=#main-nav" id="home">
     <!-- Start Here-->
     <!--This is the Navbar-->
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" id="main-nav">
         <div class="container">
             <a href="index.html" class="navbar-brand">LoopLAB</a>
             <!--This is the hamburger-->
@@ -106,53 +106,207 @@
         </div>
     </header>
 
-    <!--EXPLORE HEAD-->
+    <!-- EXPLORE HEAD -->
     <section id="explore-head-section">
         <div class="container">
             <div class="row">
                 <div class="col text-center py-5">
                     <h1 class="display-4">Explore</h1>
-                    <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste obcaecati,
-                        aspernatur ut nisi natus animi molestias quis quibusdam quisquam vel.</p>
+                    <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente doloribus ut
+                        iure itaque quibusdam rem accusantium
+                        deserunt reprehenderit sunt minus.</p>
                     <a href="#" class="btn btn-outline-secondary">Find Out More</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <!--EXPLORE SECTION-->
-  <!-- EXPLORE SECTION -->
-  <section id="explore-section" class="bg-light text-muted py-5">
+    <!-- EXPLORE SECTION -->
+    <section id="explore-section" class="bg-light text-muted py-5">
         <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-              <img src="img/explore-section1.jpg" alt="" class="img-fluid mb-3 rounded-circle">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="img/explore-section1.jpg" alt="" class="img-fluid mb-3 rounded-circle">
+                </div>
+                <div class="col-md-6">
+                    <h3>Explore & Connect</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore reiciendis, voluptate at alias
+                        laborum odit aliquid
+                        tempore perspiciatis repudiandae hic?</p>
+                    <div class="d-flex">
+                        <div class="p-4 align-self-start">
+                            <i class="fas fa-check fa-2x"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi distinctio iusto,
+                            perspiciatis mollitia natus harum?
+                        </div>
+                    </div>
+
+                    <div class="d-flex">
+                        <div class="p-4 align-self-start">
+                            <i class="fas fa-check fa-2x"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi distinctio iusto,
+                            perspiciatis mollitia natus harum?
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-6">
-              <h3>Explore & Connect</h3>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore reiciendis, voluptate at alias laborum odit aliquid
-                tempore perspiciatis repudiandae hic?</p>
-              <div class="d-flex">
-                <div class="p-4 align-self-start">
-                  <i class="fas fa-check fa-2x"></i>
-                </div>
-                <div class="p-4 align-self-end">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi distinctio iusto, perspiciatis mollitia natus harum?
-                </div>
-              </div>
-    
-              <div class="d-flex">
-                <div class="p-4 align-self-start">
-                  <i class="fas fa-check fa-2x"></i>
-                </div>
-                <div class="p-4 align-self-end">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi distinctio iusto, perspiciatis mollitia natus harum?
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
-      </section>
+    </section>
+
+    <!-- CREATE HEAD -->
+    <section id="create-head-section" class="bg-primary">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center py-5">
+                    <h1 class="display-4">Create</h1>
+                    <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente doloribus ut
+                        iure itaque quibusdam rem accusantium
+                        deserunt reprehenderit sunt minus.</p>
+                    <a href="#" class="btn btn-outline-light">Find Out More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- CREATE SECTION -->
+    <section id="create-section" class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 order-2">
+                    <img src="img/create-section1.jpg" alt="" class="img-fluid mb-3 rounded-circle">
+                </div>
+                <div class="col-md-6 order-1">
+                    <h3>Create Your Passion</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore reiciendis, voluptate at alias
+                        laborum odit aliquid
+                        tempore perspiciatis repudiandae hic?</p>
+                    <div class="d-flex">
+                        <div class="p-4 align-self-start">
+                            <i class="fas fa-check fa-2x"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi distinctio iusto,
+                            perspiciatis mollitia natus harum?
+                        </div>
+                    </div>
+
+                    <div class="d-flex">
+                        <div class="p-4 align-self-start">
+                            <i class="fas fa-check fa-2x"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi distinctio iusto,
+                            perspiciatis mollitia natus harum?
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- EXPLORE HEAD -->
+    <section id="explore-head-section" class="bg-primary">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center py-5">
+                    <h1 class="display-4">Share</h1>
+                    <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente doloribus ut
+                        iure itaque quibusdam rem accusantium
+                        deserunt reprehenderit sunt minus.</p>
+                    <a href="#" class="btn btn-outline-secondary">Find Out More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Share SECTION -->
+    <section id="share-section" class="bg-light text-muted py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="img/share-section1.jpg" alt="" class="img-fluid mb-3 rounded-circle">
+                </div>
+                <div class="col-md-6">
+                    <h3>Share What You Create</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore reiciendis, voluptate at alias
+                        laborum odit aliquid
+                        tempore perspiciatis repudiandae hic?</p>
+                    <div class="d-flex">
+                        <div class="p-4 align-self-start">
+                            <i class="fas fa-check fa-2x"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi distinctio iusto,
+                            perspiciatis mollitia natus harum?
+                        </div>
+                    </div>
+
+                    <div class="d-flex">
+                        <div class="p-4 align-self-start">
+                            <i class="fas fa-check fa-2x"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi distinctio iusto,
+                            perspiciatis mollitia natus harum?
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Footer-->
+    <footer id="main-footer" class="bg-dark">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center py-4">
+                    <h3>LoopLAB</h3>
+                    <p>Copyright &copy; <span id="year"></span></p>
+                    <button class="btn btn-primary" data-toggle="modal" data-target="#contactModal">Contact Us</button>
+
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!--Contact Modal-->
+    <div class="modal fade text-dark" id="contactModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Contact Us</h5>
+                    <button class="close" data-dismiss="modal">
+                        <span>&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="text" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea class="form-control"></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary btn-block"></button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 
 
@@ -168,6 +322,27 @@
     <script>
         //Get the current year for the copy right
         $('#year').text(new Date().getFullYear());
+
+        //INIT Scroll Spy
+        $('body').scrollspy({target: '#main-nav'});
+
+        //Smooth Scroll 
+        $("#main-nav a").on('click', function (event) {
+      if (this.hash !== "") {
+        event.preventDefault();
+
+        const hash = this.hash;
+
+        $('html, body').animate({
+          scrollTop: $(hash).offset().top
+        }, 800, function () {
+
+          window.location.hash = hash;
+        });
+      }
+    });
+
+
     </script>
 </body>
 
